# cve_management

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DASHBOARDS_DESIGN.md  FRONTEND_IMPLEMENTATION_PLAN.md  FRONTEND_REDESIGN_PROPOSAL.md  FRONTEND_REVIEW.md  LICENSE  PROPOSTE.md  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: package-lock.json  package.json
backend-py/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend-py/alembic/: env.py
backend-py/alembic/versions/: 0001_core_tables.py  0002_sync_infra.py  0003_hardening.py  0004_epss_history_cascade.py  0005_exploitability_flags.py  0006_webhooks.py  0007_risk_acceptance_and_audit.py  0008_exec_snapshots.py  0009_users.py  0010_indices_and_cleanup.py  0011_products_soft_delete.py  0012_webhook_secret_encrypted.py
backend-py/app/: main.py
backend-py/app/api/dependencies/: auth.py
backend-py/app/api/middleware/: error_handler.py  prom_http.py  security_headers.py
backend-py/app/api/routers/: audit.py  auth.py  circl_router.py  cpe_suggest.py  cves.py  dashboard.py  findings.py  health.py  intel.py  live.py  products.py  risk_acceptance.py  sla.py  system.py  webhooks.py
backend-py/app/core/: cache.py  config.py  db.py  http.py  leader.py  logging.py  metrics.py  migrations.py  prometheus.py  rate_limit.py  sentry.py  ssrf.py
backend-py/app/ingestion/: circuit_breaker.py  enrichment.py  epss_client.py  exploitability_refresh.py  ingest_worker.py  kev_client.py  nvd_client.py  rate_governor.py  vulncheck_client.py  vulnx_client.py
backend-py/app/models/: finding.py  intel.py  nvd.py  priority.py  product.py
backend-py/app/query/: circl_client.py  local_query.py  opencve_client.py  query_engine.py  vulnx_enricher.py
backend-py/app/resolution/: cpe_normalizer.py  resolution_cache.py  version_matcher.py
backend-py/app/services/: audit.py  auth_service.py  crypto.py  sla.py  webhooks.py
backend-py/app/workers/: daily_snapshot.py  product_sync.py  risk_acceptance_expirer.py  scheduler.py  sync_job_worker.py  webhook_worker.py
backend-py/tests/: conftest.py
backend-py/tests/contract/: test_circl_client.py  test_epss_client.py  test_kev_client.py  test_nvd_client.py  test_vulncheck_client.py  test_vulnx_client.py
backend-py/tests/integration/: conftest.py  test_audit_metadata_default.py  test_auth_flow.py  test_e2e_smoke.py  test_finding_lifecycle.py  test_migrations.py  test_product_sync_integration.py  test_routers_auth.py  test_sync_job_queue.py
backend-py/tests/security/: test_opsec_egress.py  test_webhook_ssrf.py
backend-py/tests/unit/: test_audit_masking.py  test_auth_service.py  test_circuit_breaker.py  test_cpe_normalizer.py  test_enrichment.py  test_metrics.py  test_priority_score.py  test_priority_score_v2.py  test_product_sync.py  test_security_headers_and_rate_limit.py  test_sla.py  test_token_bucket.py  test_version_matcher.py  test_webhook_payload.py
backend/__tests__/unit/: nvd.parse.test.js  priority.service.test.js  version-matcher.service.test.js
backend/src/: app.js
backend/src/config/: config.js
backend/src/database/: postgres.js
backend/src/database/migrations/: 001_init.sql  002_match_confidence.sql  003_finding_lifecycle.sql  004_app_config.sql  005_cve_load_management.sql
backend/src/routes/: circl.routes.js  cpe-suggest.routes.js  cve.routes.js  dashboard.routes.js  findings.routes.js  live.routes.js  products.routes.js  system.routes.js
backend/src/services/: cache.service.js  circl.service.js  cisa-kev.service.js  config.service.js  cpe-suggest.service.js  epss.service.js  finding.service.js  nvd.service.js  priority.service.js  product-sync.service.js  status.service.js  sync-worker.service.js  version-matcher.service.js
backend/src/utils/: retry.js
docs/: ARCHITECTURE.md  DEPLOY.md  OPERATIONS.md  PRODUCTION_READINESS_REVIEW.md  RUNBOOK.md
docs/adr/: 0001-auth-strategy.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.js  tailwind.config.js  vitest.config.js
frontend/src/app/: globals.css  layout.jsx  page.jsx
frontend/src/app/dashboards/: DashboardsHub.jsx  page.jsx
frontend/src/app/findings/: FindingDetailDrawer.jsx  FindingsPage.jsx  page.jsx
frontend/src/app/inventory/: InventoryPage.jsx  page.jsx
frontend/src/app/login/: page.jsx
frontend/src/app/webhooks/: WebhooksPage.jsx  page.jsx
frontend/src/components/Auth/: AuthGate.jsx
frontend/src/components/CVE/: CVEDetailModal.jsx  CVEFilters.jsx  CVETable.jsx  ExportButtons.jsx
frontend/src/components/Dashboard/: SeverityChart.jsx  StatsBar.jsx  TimelineChart.jsx  UrgentCvesPanel.jsx
frontend/src/components/Executive/: AgingBucketChart.jsx  ExecPdfButton.jsx  KpiTrendCard.jsx  TrendLineChart.jsx
frontend/src/components/Exposure/: EolFlagPanel.jsx  InventoryCoverageStrip.jsx  ProductHeatmap.jsx  TopProductsTable.jsx  TopVendorsBar.jsx
frontend/src/components/LiveSearch/: Exploitability.jsx  LiveSearchPanel.jsx
frontend/src/components/Products/: AddProductModal.jsx  ProductsGrid.jsx
frontend/src/components/Remediation/: AuditTimeline.jsx  FindingsPipeline.jsx  GovernanceExportPanel.jsx  OwnerWorkloadTable.jsx  RiskAcceptanceLifecycle.jsx  SlaSummaryMatrix.jsx
frontend/src/components/Settings/: ApiStatusCard.jsx  ApiStatusGrid.jsx  ConfigTable.jsx  SettingsPanel.jsx
frontend/src/components/Shared/: ErrorBoundary.jsx  SentryBoot.jsx
frontend/src/components/Shell/: AppShell.jsx  DashboardSwitcher.jsx  GlobalFilterBar.jsx  (+1 more)
frontend/src/lib/: api.js  auth.js  csv.js  dashboard-prefs.js  sentry.js  url-state.js  useDialog.js  utils.js
frontend/tests/: vitest.setup.js
frontend/tests/e2e/: smoke.spec.js
frontend/tests/unit/: Badge.test.jsx  ErrorBoundary.test.jsx  auth.test.js  csv.test.js
scripts/: backup.sh  migrate.sh
tests/fixtures/: sample-inventory-duplicates.csv  sample-inventory-edge-versions.csv  sample-inventory-golden.csv  sample-inventory-linux.csv  sample-inventory-malformed.csv  sample-inventory-windows.csv
tests/perf/: README.md  baseline.js
(+16 files in other folders)
