[project]
name = "cve-management"
version = "0.1.0"
description = "CVE Management Platform — Python/FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "arq>=0.26.0",
    "apscheduler>=3.10.0,<4.0.0",
    "rapidfuzz>=3.9.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "testcontainers[postgres,redis]>=0.11.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "testcontainers[postgres,redis]>=0.11.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 line too long — handled by black/formatter, not lint
# B008 function-call-in-default-argument — false positive for FastAPI Depends()
# E701/E702 multiple statements on one line — accepted in tests/migrations for compactness
# E741 ambiguous variable name — leaves a few legacy `l`/`I` in tests
# SIM102/SIM105/SIM108 — collapsible-if / suppressible-exception / if-else-expr — stylistic, low value
ignore = ["E501", "B008", "E701", "E702", "E741", "SIM102", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
# tests can have unused imports (re-exports) and assertions that look unused
"tests/**" = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
