[build-system]
# Minimal build backend so ``uv sync`` recognises the workspace as a
# project and resolves the dependency lockfile correctly even when we
# pass ``--no-install-project`` (the project source isn't present in
# the builder stage).
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "cve-management"
version = "0.1.0"
description = "CVE Management Platform — Python/FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.1.0",
    "arq>=0.26.0",
    "apscheduler>=3.10.0,<4.0.0",
    "rapidfuzz>=3.9.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "slowapi>=0.1.9",
    "bcrypt>=4.1.0",
    "pyjwt>=2.9.0",
    "email-validator>=2.0.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "testcontainers[postgres,redis]>=0.11.0",
    # ruff/mypy pinned to a known-good range so CI doesn't drift into
    # an older version that doesn't recognize the per-file-ignores syntax.
    "ruff>=0.14.0,<0.16",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    # Never executed at runtime in tests:
    "app/main.py",          # full lifespan pulls real upstreams
    "app/workers/scheduler.py",
    "app/workers/sync_job_worker.py",
    "app/workers/webhook_worker.py",
    "app/workers/risk_acceptance_expirer.py",
    "app/workers/daily_snapshot.py",
    "app/workers/product_sync.py",
    # Pre-existing legacy code paths covered by contract tests we
    # currently can't run cleanly under coverage (tracked in TST-07).
    "app/ingestion/ingest_worker.py",
    "app/ingestion/vulncheck_client.py",
    "app/ingestion/nvd_client.py",
    "app/query/circl_client.py",
    "app/query/opencve_client.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
# Target floor — enforced locally and by the dedicated integration
# job once it's wired. The default CI runner runs unit+contract only
# (no Docker-in-Docker for testcontainers) and falls short of this
# without integration tests, hence the advisory ``--cov-fail-under=0``
# in .github/workflows/ci.yml.
fail_under = 70

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# E501 line too long — handled by black/formatter, not lint
# B008 function-call-in-default-argument — false positive for FastAPI Depends()
# E701/E702 multiple statements on one line — accepted in tests/migrations for compactness
# E741 ambiguous variable name — leaves a few legacy `l`/`I` in tests
# SIM102/SIM105/SIM108 — collapsible-if / suppressible-exception / if-else-expr — stylistic, low value
ignore = ["E501", "B008", "E701", "E702", "E741", "SIM102", "SIM105", "SIM108"]

[tool.ruff.lint.per-file-ignores]
# tests can have unused imports (re-exports) and assertions that look unused
"tests/**" = ["F401", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
